# sparrow

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
crates/sparrow_commons/: Cargo.toml
crates/sparrow_docker/: Cargo.toml
crates/sparrow_docker/src/: lib.rs
